# PUMA-animator

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  codeql.yml
Tests/: CMakeLists.txt
includes/glad/: glad.h
src/: ModelParams.h  Rendering.cpp  Rendering.h  animEng.cpp  animEng.h  camera.h  common.cpp  common.h  defines.h  glad.c  gui.cpp  gui.h  inverseKin.h  logger.h  main.cpp  main.h  paths.h  settings.h  shader.cpp  shader.h
src/resources/: Base.mtl  Forearm.mtl  UpperBase.mtl  hand.mtl  joint.mtl  middlearm.mtl  sixaxisrobot.mtl
src/shaders/: shaders_debug.vs  shaders_point.fs  transform.fs  transform.vs
